Fix black close button on mobile

--- a/src/scss/_closeButton.scss
+++ b/src/scss/_closeButton.scss
@@ -1,6 +1,7 @@
 .#{$vt-namespace}__close-button {
     font-weight: bold;
-    font-size: 16px;
+    font-size: 24px;
+    line-height: 24px;
     background: transparent;
     outline: none;
     border: none;
